# fx-alphalabs

./: .env.example  .gitignore  ARCHITECTURE.md  CHART_SYSTEM.md  IMPROVED_SYSTEM_PROMPTS.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  TODO  docker-compose.yml
GOAL/: FX_ALPHALAB_BUILD_PLAN.md
fx_alphalab/: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  generate_demo_signals.py  pyproject.toml  remove_cycle5.py  requirements.txt  run_agent.py  setup.py  test.py  test_pipeline.py  train_agents_v3.py  train_v4.py
fx_alphalab/fx_alphalab/: __init__.py
fx_alphalab/fx_alphalab/agents/: __init__.py  conviction_gate.py  macro_agent.py  sentiment_agent.py  technical_agent.py
fx_alphalab/fx_alphalab/analysts/: fallbacks.py  macro.py  orchestrator.py  sentiment.py  technical.py
fx_alphalab/fx_alphalab/config/: __init__.py  settings.py
fx_alphalab/fx_alphalab/core/: __init__.py  runner.py
fx_alphalab/fx_alphalab/data_feed/: __init__.py  macro_feed.py  news_feed.py  news_rag.py  price_feed.py
fx_alphalab/fx_alphalab/llm/: client.py  rag.py
fx_alphalab/fx_alphalab/memory/: __init__.py  context_store.py
fx_alphalab/fx_alphalab/orchestrator/: __init__.py  orchestrator.py
fx_alphalab/fx_alphalab/postprocessor/: __init__.py  conviction.py  corrector.py  monitor.py
fx_alphalab/fx_alphalab/shared/: analyst_packet.py  llm_client.py
fx_alphalab/outputs/: context.json  demo_video1_commercial.csv  demo_video2_showcase.csv  signals.csv  stats_cache.json
fx_alphalab/scripts/: backtest.py  compute_backtest_stats.py  run_agent.py  train_agents.py
(+133 files in other folders)
